# arcadia-app

./: .gitignore  BUILD_PIPELINE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  extension-system-design.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci-cd.yml  ci.yml  release.yml
arcadia-store/: store-manifest.json
extensions/sample-game-library/: README.md  manifest.json
extensions/sample-game-library/src/: lib.rs
scripts/: build.sh  rust-build.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  extensions.rs  lib.rs  main.rs  models.rs
src/app/dashboard/: page.tsx
src/app/extensions/: page.tsx
src/app/extensions/store/: page.tsx
src/app/test-games-platforms/: page.tsx
src/app/test-settings/: page.tsx
src/components/: app-sidebar.tsx  data-table.tsx  extension-card.tsx  extension-details-modal.tsx  extension-manager.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  site-header.tsx
src/components/ui/: badge-variants.ts  badge.tsx  button-variants.ts  button.tsx  chart.tsx  sidebar-context.ts  sidebar-variants.ts  sidebar.tsx  theme-toggle.tsx  toggle-group.tsx  toggle-variants.ts  toggle.tsx
src/hooks/: use-app-settings.ts  use-extension-store.ts  use-extensions.ts  use-games.ts  use-platforms.ts  use-store-sources.ts
src/lib/: database.ts  extensions.ts  utils.test.ts
